--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,32 +13,35 @@
 
 /*
 = COMMON ---------------- */
+body{
+    background: #efefef;
+}
 form {
-    width: 300px;
-    margin: 25em auto;
+    width: 250px;
+    margin: 25em auto 0 auto;
 }
 .ui-dropdownized {
-    font-size: 11px;
-    line-height: 40px;
-    height: 40px;
+    font-size: 13px;
+    color: #353535;
+    line-height: 38px;
+    height: 38px;
+    background: url('../images/dropdown-bg.png') top left no-repeat;
     font-weight: bold;
-    width: 200px;
+    width: 243px;
     display: block;
-    background: #e0e0e0;
 }
 .ui-dropdownized div {
-    width: 200px;
+    width: 243px;
     text-indent: 15px;
     display: block;
     position: absolute;
-    line-height: 40px;
-    height: 40px;
+    line-height: 38px;
+    height: 38px;
 }
 .ui-dropdownized select {
     font-size: 11px;
-    width: 200px;
-    height: 40px;
 }
 .ui-dropdownized.hover {
-    background: #f0f0f0;
+    background-position: bottom left;
+    color: #000;
 }
