Removed unused CSS and fixed library to work on IE 7+.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,67 +13,9 @@
 
 /*
 = COMMON ---------------- */
-body{
-    background: #efefef;
-}
-form {
-    width: 250px;
-    margin: 25em auto 0 auto;
-}
-.ui-dropdownized {
-    font-size: 13px;
-    color: #353535;
-    line-height: 38px;
-    height: 38px;
-    background: url('../images/dropdown-bg.png') top left no-repeat;
-    font-weight: bold;
-    width: 243px;
-    display: block;
-}
-.ui-dropdownized div {
-    width: 243px;
-    text-indent: 15px;
-    display: block;
-    position: absolute;
-    line-height: 38px;
-    height: 38px;
-    z-index: 0;
-}
-.ui-dropdownized select {
-    font-size: 11px;
-}
-.ui-dropdownized.hover {
-    background-position: bottom left;
-    color: #000;
-}
-.ui-dropdownized ul{
-    position: absolute;
-    display: none;
-    z-index: 999;
-    width: 250px;
-    background: #000;
-    padding: 5px 0;
-    box-shadow: 0 0 5px #000;
-    -moz-box-shadow: 0 0 5px #000;
-    -webkit-box-shadow: 0 0 5px #000;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    color: #fff;
-}
-.ui-dropdownized ul a{
-    padding: 0 15px;
-    height: 28px;
-    line-height: 28px;
-    display: block;
-    font-size: 11px;
-    color: #999;
-    text-decoration: none;
-}
-.ui-dropdownized ul li.selected a{
-    background: #333;
-    color: #fff;
-}
-.ui-dropdownized ul a:hover{
-    color: #fff;
-}
+body{ background: #efefef; }
+form { width: 250px; margin: 25em auto 0 auto; }
+.ui-dropdownized { font-size: 13px; color: #353535; line-height: 38px; height: 38px; background: url('../images/dropdown-bg.png') top left no-repeat; font-weight: bold; width: 243px; display: inline-block; }
+.ui-dropdownized div { text-indent: 15px; }
+.ui-dropdownized select { font-size: 11px; }
+.ui-dropdownized.hover { background-position: bottom left; color: #000; }
