--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,8 +14,8 @@
 /*
 = COMMON ---------------- */
 body{ background: #efefef; }
-form { width: 250px; margin: 25em auto 0 auto; }
-.ui-dropdownized { font-size: 13px; color: #353535; line-height: 38px; height: 38px; background: url('../images/dropdown-bg.png') top left no-repeat; font-weight: bold; width: 243px; display: inline-block; }
-.ui-dropdownized div { text-indent: 15px; }
+form { width: 640px; margin: 15em auto 0 auto; }
+.ui-dropdownized { font-size: 11px; color: #353535; line-height: 28px; height: 28px; font-weight: bold; display: inline-block; position: relative; bottom: -10px; background: url('../images/dropdown-bg.png') 100% -28px no-repeat; margin: 0 7px;}
+.ui-dropdownized div { background: url('../images/dropdown-bg.png') top left no-repeat; display: block; float: left; padding-right: 30px; height: 28px; overflow: hidden; margin-left: -2px; text-indent: 10px; }
 .ui-dropdownized select { font-size: 11px; }
-.ui-dropdownized.hover { background-position: bottom left; color: #000; }
+.ui-dropdownized.hover{ color: #000; background-position: 100% -56px; }
